# auth0-management

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  scan.yml  test.yml
auth0-management/: Cargo.toml
auth0-management-codegen/: Cargo.toml  README.md  package.json
auth0-management-codegen/src/: builder.js  codegen.js  generator.rs  index.js  jen.rs  main.rs  schemas.rs  utils.js
auth0-management/src/: api.rs  lib.rs
auth0-management/src/models/: connection.rs
auth0_management/: Cargo.toml
src/: builder.rs  client.rs  error.rs  http.rs  lib.rs  page.rs  rate.rs  request.rs  sort.rs  token.rs
src/_/: client.rs  lib.rs
src/_/api/: mod.rs
src/_/tests/: rate_tests.rs
src/_/users/: mod.rs  user.rs  user_update.rs
src/_/users/permissions/: user_permissions_delete.rs
src/_old/: client.rs  error.rs
src/_old/roles/permissions/: mod.rs  role_permissions_get.rs  role_permissions_update.rs
src/_old/types/: mod.rs
src/_old/users/: user_delete.rs
src/_old/users/permissions/: user_permissions_update.rs
src/api/: connection.rs  mod.rs  page.rs  strategy.rs  users.rs
src/api/roles/: mod.rs  role.rs  role_create.rs  role_update.rs
src/api/roles/permissions/: role_permissions_delete.rs
src/api/users/: create.rs  delete.rs  enrollments.rs  find.rs  get.rs  logs.rs  mod.rs  permissions.rs  update.rs  user_create.rs  user_delete.rs  user_enrollments_get.rs  user_get.rs  user_logs_get.rs
src/api/users/permissions/: assign.rs  delete.rs  get.rs  mod.rs  user_permissions_get.rs
src/client/: mod.rs  rate.rs  token.rs
src/driver/: default.rs  mod.rs
src/entities/: mod.rs
src/entities/users/: mod.rs  user.rs  user_create.rs
src/models/: mod.rs
src/roles/: mod.rs  role_create.rs  role_users_add.rs  role_users_get.rs  roles_find.rs
src/types/: permission.rs
src/users/: mod.rs  user_create.rs  user_delete.rs  user_enrollments_get.rs  user_get.rs  user_logs_get.rs  user_reset_password.rs  user_update.rs  users_find.rs
src/users/permissions/: mod.rs  user_permissions_delete.rs  user_permissions_get.rs  user_permissions_update.rs
tests/: helpers.rs  rate_tests.rs  token_tests.rs  users_tests.rs
