[package]
name = "auth0-management"
version = "0.1.0"
authors = ["Marvin Countryman <me@maar.vin>"]
edition = "2018"
description = "Auth0 management client API"

readme = "./README.md"
license = "MIT"
keywords = ["auth0", "reqwest", "management", "api"]
categories = ["api-bindings", "asynchronous", "authentication"]
repository = "https://github.com/mcountryman/auth0-management"
documentation = "https://docs.rs/auth0-management"

[features]
default = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
chrono = { version = "0.4" }
reqwest = { version = "0.10", features = ["json"] }
async-trait = "0.1"
derive_builder = { version = "0.10" }

[dev-dependencies]
# tokio = { version = "1.5", features = ["full"] }
