[package]
name = "auth0-management"
version = "0.0.5"
authors = ["Marvin Countryman <me@maar.vin>"]
edition = "2021"
description = "An unofficial client for Auth0 Management API."
rust-version = "1.61.0"

readme = "./README.md"
license = "MIT"
keywords = ["auth0", "reqwest", "management", "api"]
categories = [
  "api-bindings",
  "asynchronous",
  "authentication"
]
repository = "https://github.com/mcountryman/auth0-management"
documentation = "https://docs.rs/auth0-management"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = {version = "0.11.11", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
async-mutex = "1.4"

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
