[package]
name = "auth0-management-codegen"
version = "0.1.0"
authors = ["Marvin Countryman <me@maar.vin>"]
edition = "2018"
description = "Auth0 management client API code generator"

readme = "../README.md"
license = "MIT"
license-file = "../LICENSE.md"
documentation = "https://docs.rs/auth0-management-codegen"

[dependencies]
ureq = { version = "*", features = ["json", "charset"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
codegen = "0.1"
convert_case = "0.4"
